--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "material-ui-image": "^3.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-pose": "^4.0.10",
+    "react-pose-text": "^3.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
