--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.0",
     "color": "^3.1.2",
     "material-ui-image": "^3.2.3",
+    "query-string": "^6.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-pose": "^4.0.10",
