--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.4",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "clsx": "^1.1.0",
+    "clsx": "^1.1.1",
     "color": "^3.1.2",
     "material-ui-image": "^3.2.3",
-    "query-string": "^6.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "query-string": "^6.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
     "react-redux": "^7.2.0",
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@svgr/cli": "^5.2.0"
+    "@svgr/cli": "^5.4.0",
+    "@welldone-software/why-did-you-render": "^4.2.5"
   }
 }
