Major rework of folder structure. Fixed search panel 'in' animation.

--- a/.env
+++ b/.env
@@ -1,5 +1,16 @@
 BROWSER=Firefox
-REACT_APP_TABSWITCHTIME=750
+
+// Time it takes to switch between screens
+REACT_APP_SWITCHSCREENDELAY=750
+
+// Initial screen switch must be asynchronous otherwise the transition fails
+REACT_APP_INITIALSCREENDELAY=1
+
+// Don't search immediately... always delay
 REACT_APP_SEARCHINITDELAY=1000
+
+// Wait a short period between each API call to pace the app and avoid overloading the API
 REACT_APP_APIINTERVAL=325
+
+// Wait a long time after errors to prevent constant failed calls
 REACT_APP_APIERRORCOOLDOWN=2500
