fix bugs & inconsistencies with animation engine

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 BROWSER=Firefox
 
 // Time it takes to switch between screens
-REACT_APP_SWITCHSCREENDELAY=750
+REACT_APP_SWITCHSCREENDELAY=1000
+
+// Slight pause before loading contents onto a screen
+REACT_APP_SWITCHSCREENINITIALPAUSE=225
 
 // Initial screen switch must be asynchronous otherwise the transition fails
 REACT_APP_INITIALSCREENDELAY=1
