--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-ui-image": "^3.2.3",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
