--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
     "react-redux": "^7.2.0",
