--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-pose": "^4.0.10",
