--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-with-mobile": "^4.2.2",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-pose": "^4.0.10",
@@ -26,6 +27,7 @@
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "simplebar-react": "^2.2.1",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
