--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
     "color": "^3.1.2",
+    "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-image": "^3.2.3",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -21,9 +22,10 @@
     "react-flip-move": "^3.0.4",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
+    "react-spring-3d-carousel": "^1.2.0",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -52,6 +54,6 @@
     ]
   },
   "devDependencies": {
-    "@welldone-software/why-did-you-render": "^4.2.5"
+    "@welldone-software/why-did-you-render": "^4.3.1"
   }
 }
