--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "color": "^3.1.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-image": "^3.2.3",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-animated-number": "^0.4.4",
     "react-beautiful-dnd": "^13.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-with-mobile": "^4.2.2",
