--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "color": "^3.1.2",
+    "js-base64": "^3.6.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-image": "^3.2.3",
     "query-string": "^6.13.1",
