--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "simplebar-react": "^2.2.1",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "use-sound": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
