--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "PokemonDex",
+  "homepage": "http://gazareth.github.io/PokemonDex",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -39,6 +40,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -58,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@welldone-software/why-did-you-render": "^4.3.1"
+    "@welldone-software/why-did-you-render": "^4.3.1",
+    "gh-pages": "^3.1.0"
   }
 }
