--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@welldone-software/why-did-you-render": "^4.3.1",
+    "eslint": "^6.6.0",
     "gh-pages": "^3.1.0"
   }
 }
